[Curl] Favicons loaded from disc cache are ignored. https://bugs.webkit.org/show_bug.cgi?id=143953

Reviewed by Alex Christensen.

When a favicon is loaded from the Curl disc cache, the icon data is thrown away.
This happens because we give a 304 response, which makes the icon loader ignore
the response. We can solve this by responding with 200 OK.

* platform/network/ResourceHandleInternal.h:
(WebCore::ResourceHandleInternal::ResourceHandleInternal):
* platform/network/curl/CurlCacheManager.cpp:
(WebCore::CurlCacheManager::didReceiveResponse):
* platform/network/curl/ResourceHandleManager.cpp:
(WebCore::headerCallback):
(WebCore::ResourceHandleManager::initializeHandle):


Canonical link: https://commits.webkit.org/162271@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183407 268f45cc-cd09-0410-ab3c-d52691b4dbfc